deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node4k8s-service
spec:
  selector:
    app: node4k8s
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
